--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "e-commerce-backend",
+  "name": "e-comm-backend",
   "version": "1.0.0",
-  "description": "E-commerce backend API",
+  "description": "E-comme backend API for RENDER",
   "main": "backend/server.js",
   "scripts": {
     "build": "cd backend && npm install && npx prisma generate && npx prisma migrate deploy",
@@ -11,7 +11,6 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["ecommerce", "api", "backend"],
   "author": "",
   "license": "ISC"
 }
